# service-fabric-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  bindings.txt  build.rs  rust-toolchain.toml
.cargo/: config.toml
crates/fabric/base/: Cargo.toml  README.md  build.rs  rustfmt.toml
crates/fabric/base/src/: lib.rs
crates/fabric/ext/: Cargo.toml
crates/fabric/ext/src/: lib.rs
crates/fabric/ext/src/fasync/: mod.rs
crates/fabric/pal/: Cargo.toml  README.md
crates/fabric/pal/src/: lib.rs  pal.rs
crates/fabric/rs/: Cargo.toml
crates/fabric/rs/src/: lib.rs
crates/fabric/rs/src/client/: app.rs  health.rs  mgmt.rs  mod.rs  property.rs  query.rs  svc.rs  svcgp.rs  tests.rs
crates/fabric/rs/src/debug/: mod.rs
crates/fabric/rs/src/runtime/: error.rs  executor.rs  mod.rs  proxy.rs  stateful.rs  stateful_bridge.rs  stateful_proxy.rs  stateful_types.rs  stateless.rs  stateless_bridge.rs  store.rs  store_proxy.rs  store_types.rs
crates/fabric/rs/src/sync/: mod.rs
crates/libs/com/: Cargo.toml  README.md  build.rs  features.json
crates/libs/com/src/: lib.rs
crates/libs/com/src/Microsoft/: mod.rs
crates/libs/com/src/ServiceFabric/: FabricClient.rs  FabricCommon.rs  FabricRuntime.rs  FabricTransport.rs  FabricTypes.rs  mod.rs
crates/libs/core/: Cargo.toml  README.md
crates/libs/core/src/: iter.rs  lib.rs  mem.rs  strings.rs
crates/libs/core/src/api/: mod.rs
crates/libs/core/src/client/: app.rs  application_client.rs  connection.rs  health.rs  health_client.rs  mgmt.rs  mod.rs  notification.rs  package_change.rs  property.rs  property_client.rs  query.rs  query_client.rs  query_types.rs  resolve.rs  svc.rs  svc_mgmt_client.rs  svcgp.rs  tests.rs
crates/libs/core/src/conf/: mod.rs
crates/libs/core/src/debug/: mod.rs
crates/libs/core/src/error/: errorcode.rs  mod.rs
crates/libs/core/src/runtime/: activation_context.rs  bridge.rs  config.rs  error.rs  executor.rs  iter.rs  mod.rs  node_context.rs  runtime.rs  runtime_wrapper.rs  self_reconfiguring_bridge.rs  self_reconfiguring_proxy.rs  self_reconfiguring_traits.rs  stateful.rs  stateful_bridge.rs  stateful_proxy.rs  stateful_traits.rs  stateful_types.rs  stateless.rs  stateless_bridge.rs  stateless_proxy.rs  stateless_traits.rs  store.rs  store_proxy.rs  store_types.rs
crates/libs/core/src/sync/: bridge.rs  bridge_context.rs  cancel.rs  channel.rs  mod.rs  proxy.rs  token.rs  wait.rs
crates/libs/core/src/types/: mockifabricclientsettings.rs  mod.rs
crates/libs/pal/: Cargo.toml  README.md
crates/libs/pal/src/: Win32.rs  lib.rs  pal.rs  strings.rs
crates/libs/util/: Cargo.toml  README.md
crates/libs/util/src/: data.rs  lib.rs  resolve.rs  retry.rs
crates/libs/util/src/mock/: mod.rs  runtime.rs  stateful.rs  stateless.rs
crates/libs/util/src/monitoring/: consumer.rs  entities.rs  mod.rs  producer.rs  upgrade_producer.rs
crates/libs/util/src/tokio/: mod.rs  tests.rs
crates/libs/util/src/tonic/: middleware.rs  mod.rs
crates/libs/util/tests/: tonic_middleware.rs
crates/samples/client/: Cargo.toml  build.rs
crates/samples/client/src/: main.rs
crates/samples/dummy-self-reconfig/: CMakeLists.txt  Cargo.toml
crates/samples/dummy-self-reconfig/manifests/: ApplicationManifest.xml
crates/samples/dummy-self-reconfig/manifests/DummySelfReconfigServicePackage/: ServiceManifest.xml
crates/samples/dummy-self-reconfig/src/: factory.rs  instance.rs  main.rs
crates/samples/dummy-self-reconfig/tests/: health.rs
crates/samples/echo2/: CMakeLists.txt  Cargo.toml
crates/samples/echo2/manifests/: ApplicationManifest.xml
crates/samples/echo2/manifests/EchoAppServicePackage2/: ServiceManifest.xml
crates/samples/echo2/src/: config.rs  echo.rs  main.rs
crates/samples/echomain/: CMakeLists.txt  Cargo.toml  build.rs
crates/samples/echomain-stateful/: CMakeLists.txt  Cargo.toml  README.md
crates/samples/echomain-stateful/manifests/: ApplicationManifest.xml  ServiceManifest.Linux.xml  ServiceManifest.xml
crates/samples/echomain-stateful/manifests/EchoAppStatefulServicePackage/: ServiceManifest.xml
crates/samples/echomain-stateful/src/: app.rs  main.rs
crates/samples/echomain-stateful/src/app/: echo.rs
crates/samples/echomain-stateful2/: CMakeLists.txt  Cargo.toml  README.md
crates/samples/echomain-stateful2/manifests/: ApplicationManifest.xml  ServiceManifest.Linux.xml  ServiceManifest.xml
crates/samples/echomain-stateful2/src/: echo.rs  kvstore.rs  main.rs  statefulstore.rs  test.rs  test2.rs
crates/samples/echomain/manifests/: ApplicationManifest.xml  ServiceManifest.Linux.xml  ServiceManifest.xml
crates/samples/echomain/src/: app.rs  echo.rs  main.rs  service_factory.rs  service_instance.rs  test.rs
crates/samples/kvstore/: CMakeLists.txt  Cargo.toml
crates/samples/kvstore/manifests/: ApplicationManifest.xml
crates/samples/kvstore/src/: kvstore.rs  main.rs
crates/samples/no_default_features/: CMakeLists.txt  Cargo.toml  build.rs
crates/samples/no_default_features/src/: lib.rs
crates/samples/only-bundled-libs/: CMakeLists.txt  Cargo.toml
crates/samples/only-bundled-libs/src/: lib.rs
crates/samples/reflection/: CMakeLists.txt  Cargo.toml  README.md  build.rs
crates/samples/reflection/manifests/: ApplicationManifest.xml
crates/samples/reflection/proto/: control.proto  helloworld.proto  initdata.proto
crates/samples/reflection/reflection_ctl/: main.rs
crates/samples/reflection/src/: control.rs  echo.rs  grpc.rs  grpc_control.rs  lib.rs  lifecycle.rs  main.rs  self_reconfiguring.rs  statefulstore.rs  test.rs  test2.rs  test_admin.rs  test_cluster.rs
crates/samples/reflection/tests/: concurrency.rs  concurrent_close.rs  control_e2e.rs  fail_change_role.rs  fail_lifecycle.rs  failover.rs  partition_admin.rs  self_reconfiguring_control.rs  tonic_failover.rs
crates/tools/fabric-gen/: Cargo.toml
crates/tools/fabric-gen/src/: gen.rs  main.rs
tests/mssf-tests/: Cargo.toml  build.rs
tests/mssf-tests/proto/: testsvc.proto
tests/mssf-tests/src/: lib.rs
tests/mssf-tests/tests/: tonic_failover.rs  tonic_server_trailers.rs
(+140 files in other folders)
