[workspace]
resolver = "2"
members = [
    "crates/tools/*",
    # "crates/samples/*",
    "crates/libs/com",
    "crates/libs/core",
    "crates/libs/pal",
]

[workspace.dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3",  default-features = false, features = ["fmt"]}
tokio-util = "0.7"
ctrlc = { version = "3.0", features = ["termination"] }
tokio = { version = "1", features = ["full"] }
windows = {version = "0.58", features = ["implement"]}
windows-core = "0.58"
trait-variant = "0.1"
serde = "*"
serde_derive = "*"
# crates in this repo
mssf-com = { path = "./crates/libs/com" }
mssf-core = { path = "./crates/libs/core", default-features = true}