[workspace]
resolver = "2"
members = [
    "crates/tools/*",
    "crates/samples/*",
    "crates/libs/com",
    "crates/libs/core",
    "crates/libs/pal",
]
package.edition = "2024"

[workspace.dependencies]
bitflags = "2"
config = { version = "0.15", default-features = false }
ctrlc = { version = "3.4", features = [
    "termination",
], default-features = false }
libloading = "0.8"
lazy_static = "1.5"
serde = "1"
serde_derive = "1"
tokio = { version = "1", features = [
    "sync",
    "rt-multi-thread",
    "rt",
    "macros",
    "time",
    "io-util",
    "net",
    "signal"
], default-features = false }
tokio-util = "0.7"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
trait-variant = "0.1"
windows = { version = "0.61", default-features = false }
windows-bindgen = "0.62"
windows-core = "0.61"

# crates in this repo
mssf-com = { version = "0.2.0", path = "./crates/libs/com", default-features = false }
mssf-core = { version = "0.2.0", path = "./crates/libs/core", default-features = true }
mssf-pal = { version = "0.2.0", path = "./crates/libs/pal", default-features = true }
