[workspace]
resolver = "2"
members = [
    "crates/tools/*",
    "crates/samples/*",
    "crates/libs/com",
    "crates/libs/core",
    "crates/libs/pal",
    "crates/libs/util",
]
package.edition = "2024"
package.authors = [ "youyuanwu@outlook.com" ]
package.documentation = "https://learn.microsoft.com/en-us/azure/service-fabric/"
package.repository = "https://github.com/Azure/service-fabric-rs"
package.license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
bitflags = "2"
config = { version = "0.15", default-features = false }
ctrlc = { version = "3.5", features = [
    "termination",
], default-features = false }
futures-channel = { version = "0.3", features = [], default-features = false }
libloading = "0.9"
lazy_static = "1.5"
serde = "1"
serde_derive = "1"
tokio = { version = "1", features = [
    "sync",
    "rt-multi-thread",
    "rt",
    "macros",
    "time",
    "io-util",
    "net",
    "signal"
], default-features = false }
tokio-util = { version = "0.7", default-features = false, features = [] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
test-log = { version = "0.2", default-features = false , features = ["trace"]}
trait-variant = "0.1"
windows = { version = "0.62", default-features = false }
windows-bindgen = "0.66"
windows-core = "0.62"

# crates in this repo
mssf-com = { version = "0.5", path = "./crates/libs/com", default-features = false }
mssf-core = { version = "0.6", path = "./crates/libs/core", default-features = false }
mssf-pal = { version = "0.5", path = "./crates/libs/pal", default-features = true }
mssf-util = { version = "0.6", path = "./crates/libs/util", default-features = true }
