[package]
name = "fabric_ext"
version = "0.0.2"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "*"
tokio = { version = "1", features = ["full"] }
paste = "1.0"

[dependencies.windows]
version = "0.43"
features = [
    "implement",
    "interface"
]

[dependencies.service-fabric-rs]
path = "../../../"
features = [
    "implement"
]