[package]
name = "fabric_ext"
version = "0.0.2"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "*"
tokio = { version = "1", features = ["full"] }
paste = "1.0"
windows-core = "0.51"

[dependencies.windows]
version = "0.51"
features = [
    "implement",
    "Win32_System_Com",
    "Win32_Foundation"
]

[dependencies.fabric_base]
path = "../base"
features = [
    "implement",
    "Win32_Foundation",
    "ServiceFabric",
    "ServiceFabric_FabricCommon",
    "ServiceFabric_FabricCommon_FabricClient"
]