[package]
name = "pal"
version = "0.1.0"
edition = "2021"


[lib]
name = "fabric_rust_pal"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation"
]

[dependencies]
libc = "0.2"