[package]
name = "fabric_rs"
version = "0.0.2"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "*"
tokio = { version = "1", features = ["full"] }
paste = "1.0"
windows-core = "0.51"
ctrlc = { version = "3.0", features = ["termination"] }
trait-variant = "0.1.1"

[dependencies.windows]
version = "0.51"
features = [
    "implement",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Kernel", # for debug api
    "Win32_System_Diagnostics_Debug_Extensions"
]

[dependencies.fabric_base]
path = "../base"
features = [
    "implement",
    "Win32_Foundation",
    "ServiceFabric",
    "ServiceFabric_FabricCommon",
    "ServiceFabric_FabricCommon_FabricClient",
    "ServiceFabric_FabricCommon_FabricRuntime"
]

# requires return impl trait feature
[package.metadata]
rust-version = "1.75"