[package]
name = "mssf-com"
version = "0.0.18"
edition = "2021"
license = "MIT"
description = "Rust for Azure Service Fabric. The COM base layer."
documentation = "https://learn.microsoft.com/en-us/azure/service-fabric/"
repository = "https://github.com/Azure/service-fabric-rs"
readme = "README.md"
authors = ["youyuanwu@outlook.com"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies.mssf-pal]
path = "../pal"
version = "0.0.18"

[features]
default = [
    "bundled_libs", 
    "ServiceFabric_FabricClient",
    "ServiceFabric_FabricCommon",
    "ServiceFabric_FabricRuntime",
    "ServiceFabric_FabricTypes"
]
bundled_libs = []
Foundation = []
# generated features
ServiceFabric = ["Foundation"]
ServiceFabric_FabricClient = ["ServiceFabric"]
ServiceFabric_FabricCommon = ["ServiceFabric"]
ServiceFabric_FabricRuntime = ["ServiceFabric"]
ServiceFabric_FabricTypes = ["ServiceFabric"]
