[package]
name = "mssf-com"
version = "0.5.1"
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

description = "Rust for Azure Service Fabric. The COM base layer."
include = ["**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies]
mssf-pal.workspace = true

[features]
default = []
Foundation = []
# generated features
ServiceFabric = ["Foundation"]
ServiceFabric_FabricClient = ["ServiceFabric"]
ServiceFabric_FabricCommon = ["ServiceFabric"]
ServiceFabric_FabricRuntime = ["ServiceFabric"]
ServiceFabric_FabricTypes = ["ServiceFabric"]
