[package]
name = "mssf-core"
version = "0.2.1"
edition.workspace = true
license = "MIT"
description = "Rust for Azure Service Fabric. Rust safe APIs."
documentation = "https://learn.microsoft.com/en-us/azure/service-fabric/"
repository = "https://github.com/Azure/service-fabric-rs"
readme = "README.md"
authors = ["youyuanwu@outlook.com"]
include = ["**/*.rs", "Cargo.toml"]

[features]
default = ["config_source", "tokio_async", "tracing"]
# Required for a lot of callback functionality.
# Also requires ctrlc for signal handling
tokio_async = ["dep:tokio", "dep:tokio-util"]
# Config crate required to implement its interface. 
config_source = ["dep:config"]
tracing = ["dep:tracing"]

[dependencies]
tracing = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync", "rt"], optional = true, default-features = false}
tokio-util = { workspace = true , optional = true }
trait-variant.workspace = true
bitflags.workspace = true
config = { workspace = true, optional = true }
libloading.workspace = true
lazy_static.workspace = true
mssf-pal.workspace = true

[dev-dependencies]
tokio.workspace = true

# windows dep is only enabled on windows os.
[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_System_Diagnostics_Debug_Extensions", # for debug api
]

[dependencies.mssf-com]
workspace = true
default-features = false
features = [
    "ServiceFabric_FabricClient",
    "ServiceFabric_FabricCommon",
    "ServiceFabric_FabricTypes",
    "ServiceFabric_FabricRuntime",
]
