[package]
name = "mssf-core"
version = "0.6.0"
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true

description = "Rust for Azure Service Fabric. Rust safe APIs."
readme = "README.md"
include = ["**/*.rs", "Cargo.toml"]

[features]
default = ["config_source", "tracing"]
# Config crate required to implement its interface. 
config_source = ["dep:config"]
tracing = ["dep:tracing"]

[dependencies]
async-trait = { workspace = true }
futures-channel = { workspace = true, default-features = false, features = ["std"] }
tracing = { workspace = true, optional = true }
trait-variant.workspace = true
bitflags.workspace = true
config = { workspace = true, optional = true }
libloading.workspace = true
lazy_static.workspace = true
mssf-pal.workspace = true

[dev-dependencies]
tokio.workspace = true

# windows dep is only enabled on windows os.
[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_System_Diagnostics_Debug_Extensions", # for debug api
]

[dependencies.mssf-com]
workspace = true
default-features = false
features = [
    "ServiceFabric_FabricClient",
    "ServiceFabric_FabricCommon",
    "ServiceFabric_FabricTypes",
    "ServiceFabric_FabricRuntime",
]
