[package]
name = "mssf-pal"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "mssf-pal enables service fabric rust to run on linux"
documentation = "https://learn.microsoft.com/en-us/azure/service-fabric/"
repository = "https://github.com/Azure/service-fabric-rs"
readme = "README.md"
include = ["**/*.rs", "Cargo.toml"]

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-core.workspace = true
