[package]
name = "mssf-pal"
version = "0.4.0"
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true

description = "mssf-pal enables service fabric rust to run on linux"
readme = "README.md"
include = ["**/*.rs", "Cargo.toml"]

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-core.workspace = true
