[package]
name = "mssf-util"
version = "0.3.1"
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
readme = "README.md"
authors.workspace = true

description = "mssf utilites and extensions for tokio and more"

[features]
default = ["tokio", "tracing"]
tokio = ["dep:tokio", "dep:tokio-util"]
tracing = ["dep:tracing"]

[dependencies]
tokio = { workspace = true, features = ["rt", "signal"], optional = true, default-features = false }
tokio-util = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
mssf-core = { workspace = true, default-features = false }

[dev-dependencies]
mssf-com.workspace = true
trait-variant.workspace = true