[package]
name = "mssf-util"
version = "0.6.2"
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
readme = "README.md"
authors.workspace = true

description = "mssf utilites and extensions for tokio and more"

[features]
default = ["tokio", "tracing"]
tokio = ["dep:tokio", "dep:tokio-util"]
tracing = ["dep:tracing"]

[dependencies]
tokio = { workspace = true, features = ["rt", "signal"], optional = true, default-features = false }
tokio-util = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
mssf-core = { workspace = true, default-features = false }
mssf-com = { workspace = true }

[dev-dependencies]
trait-variant.workspace = true
tracing-subscriber.workspace = true