[package]
name = "samples_client"
version = "0.0.1"
edition = "2018"

[dependencies.windows]
version = "0.51"
features = [
    "implement"
]

[dependencies.fabric_base]
path = "../../fabric/base"
features = [
    "implement"
]

[dependencies.fabric_rs]
path = "../../fabric/rs"

[dependencies]
windows-core = "0.51"