[package]
name = "samples_client"
version = "0.0.1"
edition = "2018"

[dependencies.windows]
version = "0.56"
features = [
    "implement"
]

[dependencies.mssf-com]
path = "../../libs/com"
features = [
    "implement"
]

[dependencies.mssf-core]
path = "../../libs/core"

[dependencies]
windows-core = "0.56"