[package]
name = "samples_echomain_stateful"
version = "0.0.1"
edition.workspace = true
publish = false

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
ctrlc.workspace = true
tokio.workspace = true
windows-core.workspace = true
mssf-com.workspace = true
mssf-core = { workspace = true, features = []} # do not use any features

