[package]
name = "samples_echomain_stateful2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "*"
ctrlc = { version = "3.0", features = ["termination"] }
tokio = { version = "1", features = ["full"] }
windows-core = "0.51"
trait-variant = "0.1.1"

[dependencies.windows]
version = "0.51"
features = [
    "implement"
]

[dependencies.mssf-com]
path = "../../libs/com"
features = [
    "implement",
    "ServiceFabric",
    "ServiceFabric_FabricCommon",
    "ServiceFabric_FabricCommon_FabricRuntime"
]

[dependencies.mssf-core]
path = "../../libs/core"