[package]
name = "samples_echomain_stateful2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { version = "1", features = ["full"] }
windows-core = "0.57"
trait-variant = "0.1.1"

[dependencies.windows]
version = "0.57"
features = [
    "implement"
]

[dependencies.mssf-com]
path = "../../libs/com"

[dependencies.mssf-core]
path = "../../libs/core"