[package]
name = "samples_echomain_stateful2"
version = "0.1.0"
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-util.workspace = true
trait-variant.workspace = true
mssf-core = { workspace = true, default-features = true }
mssf-util = { workspace = true, default-features = true }
