[package]
name = "samples_echomain"
version = "0.0.1"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "*"
ctrlc = { version = "3.0", features = ["termination"] }
tokio = { version = "1", features = ["full"] }
windows-core = "0.54"

[dependencies.windows]
version = "0.54"
features = [
    "implement"
]

[dependencies.mssf-com]
path = "../../libs/com"
features = [
    "implement",
    "ServiceFabric",
    "ServiceFabric_FabricCommon",
    "ServiceFabric_FabricCommon_FabricRuntime"
]

[dependencies.mssf-core]
path = "../../libs/core"
