[package]
name = "samples_echomain"
version = "0.0.1"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "*"
ctrlc = { version = "3.0", features = ["termination"] }
tokio = { version = "1", features = ["full"] }
serde = "*"
serde_derive = "*"

[dependencies.mssf-core]
path = "../../libs/core"
