[package]
name = "samples_echomain"
version = "0.0.1"
edition.workspace = true
publish = false

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_derive.workspace = true
mssf-core = { workspace = true, default-features = true }
mssf-util = { workspace = true, default-features = true }
