[package]
name = "kvstore"
version = "0.1.0"
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
windows-core.workspace = true
mssf-com.workspace = true
mssf-core.workspace = true