[package]
name = "no_default_features"
version = "0.1.0"
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib","staticlib"]

[dependencies]
mssf-com.workspace = true

# disable all features
[dependencies.mssf-core]
path = "../../libs/core"
default-features = false
features = []
