[package]
name = "samples_reflection"
version = "0.1.0"
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
trait-variant.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
url.workspace = true
uuid.workspace = true
mssf-core = { workspace = true, default-features = true }
mssf-util = { workspace = true, default-features = true }

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
serial_test.workspace = true
test-log.workspace = true